--- a/3_streaming_data/csharp/ChocolateFactorySubscriber/ChocolateFactorySubscriber.csproj
+++ b/3_streaming_data/csharp/ChocolateFactorySubscriber/ChocolateFactorySubscriber.csproj
@@ -2,11 +2,15 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Rti.ConnextDds" Version="0.0.1-*" />
+    <PackageReference Include="Rti.ConnextDds" Version="0.0.2-*" />
     <PackageReference Include="System.CommandLine.DragonFruit" Version="0.3.0-alpha.20303.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ChocolateFactoryTypes\ChocolateFactoryTypes.csproj" />
   </ItemGroup>
 </Project>
