--- a/5_basic_qos/csharp/MonitoringCtrlApplication/MonitoringCtrlApplication.csproj
+++ b/5_basic_qos/csharp/MonitoringCtrlApplication/MonitoringCtrlApplication.csproj
@@ -2,12 +2,15 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net5</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Rti.ConnextDds" Version="0.0.1-*" />
+    <PackageReference Include="Rti.ConnextDds" Version="0.0.2-*" />
     <PackageReference Include="System.CommandLine.DragonFruit" Version="0.3.0-alpha.20303.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Utils\Utils.csproj" />
+  </ItemGroup>
 </Project>
