--- a/5_basic_qos/csharp/TemperingApplication/TemperingApplication.csproj
+++ b/5_basic_qos/csharp/TemperingApplication/TemperingApplication.csproj
@@ -11,6 +11,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Utils\Utils.csproj" />
+    <ProjectReference Include="..\ChocolateFactoryTypes\ChocolateFactoryTypes.csproj" />
   </ItemGroup>
 </Project>
