--- a/6_content_filters/csharp/IngredientApplication/IngredientApplication.csproj
+++ b/6_content_filters/csharp/IngredientApplication/IngredientApplication.csproj
@@ -9,4 +9,9 @@
     <PackageReference Include="Rti.ConnextDds" Version="0.0.2-*" />
     <PackageReference Include="System.CommandLine.DragonFruit" Version="0.3.0-alpha.20303.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ChocolateFactoryTypes\ChocolateFactoryTypes.csproj" />
+  </ItemGroup>
+
 </Project>
