--- a/6_content_filters/csharp/MonitoringCtrlApplication/MonitoringCtrlApplication.csproj
+++ b/6_content_filters/csharp/MonitoringCtrlApplication/MonitoringCtrlApplication.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Rti.ConnextDds" Version="6.1.0-*" />
+    <PackageReference Include="Rti.ConnextDds" Version="6.1.1" />
     <PackageReference Include="System.CommandLine.DragonFruit" Version="0.3.0-alpha.20303.1" />
   </ItemGroup>
 
